track stock for supermarket available
