# app/Routes/ApiRoutes.php
@@ -5,7 +5,6 @@ namespace App\Routes;
 use App\Controllers\ProductController;
 use App\Controllers\StockController;
 use App\Controllers\SupermarketController;
-use App\Controllers\TestController;
 use App\Controllers\UserController;
 use App\Helpers\Router;
 
@@ -27,8 +26,8 @@ class ApiRoutes {
         $router->delete('/api/supermarket/{id}', [SupermarketController::class, 'deleteSupermarket']);
 
         $router->get('/api/stock/index', [StockController::class, 'index']);
+        $router->get('/api/stock/supermarket/{id}', [StockController::class, 'getSupermarketStock']);
 
-        $router->get('/api/test', [TestController::class, 'testGet']);
         $router->dispatchRequest();
     }
 }
